--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <title>A page title</title>
+    <title>CodeBot</title>
 
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -35,7 +35,7 @@
          [10]<input type=submit name="submitbutton" value="Submit"><br />
          [11]<input type=reset name="resetbutton" value="Reset"></td></tr>
      <tr>
-       <td colsPAN=2>Filename: [4]<input type=file name="file" size=15></td></tr>
+       <td colspan=2>Filename: [4]<input type=file name="file" size=15></td></tr>
      <tr>
        <td>My Computer Peripherals:<br />
          [5]<input type=checkbox name="peripherals" value="modem">28.8K Modem<br />
