Add 3 HTML5 Elements

--- a/index.html
+++ b/index.html
@@ -60,6 +60,22 @@
            <option value="violet">Violet  <option value="peach">Peach
          </select></td></tr>
    </table>
+
+   <table>
+     <tr>
+       <td>Quantity:
+         <input type="number" name="points"
+         min="0" max="100" step="10" value="30"></td></tr>
+
+         <tr>
+           <td>Select your favorite color:
+             <input type="color" name="favcolor"></td></tr>
+
+             <tr>
+               <td>Select a week:
+                 <input type="week" name="week_year"></td></tr>
+   </table>
+
   </form>
   <div id="div-table-2">
     <table id="table-2">
