Replace week input with email input

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
              <input type="color" name="favcolor"></td></tr>
 
              <tr>
-               <td>Select a week:
-                 <input type="week" name="week_year"></td></tr>
+               <td>E-mail:
+                 <input type="email" name="email"></td></tr>
    </table>
 
   </form>
